19543
```scala
scala> import _root_.{scala => xxx}
<console>:7: error: _root_ cannot be imported
       import _root_.{scala => xxx}
              ^
```
It doesn't work in both the REPL and the IDE.
